# Automated-resume_screening-using-Machine-learning

./: .gitignore  .vercelignore  Pipfile  README.md  app.py  build.sh  model.py  package.json  pyproject.toml  requirements.txt  resume_processing.py  vercel.json  wsgi.py
api/: index.py  requirements.txt
static/css/: styles.css
templates/: index.html  landing.html  results.html
uploads/: resumes_large.csv
uploads/job_descriptions/: sample-job-description.txt
