[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-screening"
version = "1.0.0"
description = "Automated Resume Screening using Machine Learning"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "numpy==1.24.3",
    "PyPDF2==3.8.1",
    "Werkzeug==3.0.0"
]
